2002-06-24  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* include/cygwin/cygserver.h: Add forward declarations of class
	transport_layer_base and class process_cache to reduce
	dependencies between header files.
	* include/cygwin/cygserver_process.h: Add include of
	"threaded_queue.h".
	* cygserver.cc: Remove unnecessary cygserver header files.
	* cygserver_client.cc: Ditto.
	* cygserver_process.cc: Ditto.
	* cygserver_shm.cc: Ditto.
	* cygserver_shm.h: Ditto.
	* cygserver_transport_pipes.cc: Ditto.
	* dcrt0.cc: Ditto.
	* fhandler_tty.cc: Ditto.
	* tty.cc: Ditto.

2002-06-24  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* cygserver_shm.h: Replace <sys/shm.h> with "cygwin_shm.h" after
	merge from HEAD.
	* cygwin_ipc.h: Update with changes to include/sys/ipc.h lost in
	merge from HEAD.
	* cygwin_shm.h: Ditto.

2002-06-23  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* fhandler.cc (fhandler_base::fstat): Set S_IFIFO for pipes.
	* fhandler_socket.cc (fhandler_socket.cc::fstat): Set S_IFSOCK.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	* lib/_cygwin_S_IEXEC.cc: Remove obsolete file.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	Use cygwin_{shm,ipc}.h instead of /sys/{shm,ipc}.h throughout.
	* sys/ipc.h: Remove.
	* sys/shm.h: Remove.
	* cygwin_ipc.h: New file.
	* cygwin_shm.h: New file.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	* cygwin.sc: Add recent changes from ld sources.

2002-06-23  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* winsup.h: Move #ifdef EXPCGF code into "winbase.h".
	* winbase.h: #ifdef EXPCGF code moved here from "winsup.h".

2002-06-21  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* cygserver.cc: The tests for a duplicate server instance are now
	the responsibility of the transport layer.
	(request_loop): Use new `recoverable' flag in call to
	`cygserver_transport::accept ()' and shutdown on an unrecoverable
	error.
	(main): Never call `cygserver_init ()'.  Fake `cygserver_running'
	just for sending a shutdown request.